--- a/clothes.html
+++ b/clothes.html
@@ -127,9 +127,9 @@
 
   <img class="about-big"src="./imgs/clothes-big.jpg" alt="">
   <div class="about-more row section section-container">
-    <h1>Ride in Style</h1>
+    <h1>Ride in Style From sleek jerseys and padded shorts to weather-resistant jackets and versatile accessories</h1>
       <div class="col about-p">
-        <p>From sleek jerseys and padded shorts to weather-resistant jackets and versatile accessories, our collection combines performance-driven features with on-trend designs to ensure that you ride in style, no matter where your journey takes you.
+        <p> Our collection combines performance-driven features with on-trend designs to ensure that you ride in style, no matter where your journey takes you.
         </p>
         <button class="btn-custom read-more-trigger" id=6>read more</button>
 
