--- a/index.html
+++ b/index.html
@@ -230,7 +230,22 @@
    
 
   </div>
+  <div class="video-section">
+    <div class="video-text col">
+      <h1 >Explore Bike Kings Road offers</h1>
+      <div class="row video-p">
+        <a target="_blank" href="bikes.html">  <h3>Bikes</h3></a>
+        <a target="_blank"href="accessories.html"> <h3>Accessories</h3></a>
+        <a target="_blank" href="clothes.html">     <h3>Clothes</h3></a>
+   
+      </div>
+    </div>
 
+    <video class="video"width="100%" autoplay loop muted class="video" >
+      <source src="./video/bike-video.mp4" type="video/mp4">
+
+    </video>
+  </div>
   <div class="big-main-section">
     <div class="about-more row section section-container">
         <div class="col">  
@@ -322,7 +337,9 @@
   </div>
 
   <div class="service-section">
-    <h1 class="header">Local service we provide</h1>
+    <h1 class="header">Check your nearby service
+    </h1>
+S
     <div class="map-box">
       <div class="map-container">
       
