--- a/accessories.html
+++ b/accessories.html
@@ -154,7 +154,15 @@
     <div class="news-text">
       <h1>Gear up for adventure, style, and performance with Bike King Borders.</h1>
       <p>Stay in the loop with the latest updates, exclusive offers, and insider tips straight to your inbox.</p>
-      <div class="input-button-news row"><input type="text" placeholder="Email Address"> <button class="btn-custom">Submit</button></div>
+      <div class="input-button-news row">
+        <form  >
+          <input required type="text" placeholder="Email Address" class="newsLetterInput" > 
+          <button class="btn-custom submit_newsletter">Submit</button>
+        </form>
+    
+      </div>
+
+      <div class="info-news"></div>
 
     </div>
 
