--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
   <div class="modal-container">
    
-  
    
    
 
@@ -224,10 +223,10 @@
 
 
     </div>
-
+    
     <div class="mid_second_col">
         <div class="mid-second-container">
-          <a href="https://www.freepik.com/" target="_blank"> <img src="./imgs/bike-top-4.png" alt="images from freepik.com"> </a>
+          <a href="https://www.freepik.com/" target="_blank"> <img src="./imgs/bike-top-3.png" alt="images from freepik.com"> </a>
         </div>
         <div class="mid-second-container text-mid-bottom">
           <div class="text-mid-container text-mid-second">
@@ -406,7 +405,15 @@ S
     <div class="news-text">
       <h1>Gear up for adventure, style, and performance with Bike King Borders.</h1>
       <p>Stay in the loop with the latest updates, exclusive offers, and insider tips straight to your inbox.</p>
-      <div class="input-button-news row"><input type="text" placeholder="Email Address"> <button class="btn-custom">Submit</button></div>
+      <div class="input-button-news row">
+        <form  >
+          <input required type="text" placeholder="Email Address" class="newsLetterInput" > 
+          <button class="btn-custom submit_newsletter">Submit</button>
+        </form>
+    
+      </div>
+
+      <div class="info-news"></div>
 
     </div>
 
