--- a/service.html
+++ b/service.html
@@ -168,22 +168,46 @@
 
 
   </div>
- 
   <h1 class="header">Things we check during the service.</h1>
+
+  <div class="bike-service-repair-section">
+
+    <div class="img-container-service-repair-bike">
+      <div class="display-bike-elements rails-container" ><span class="bikeComponentsTitle">Rails</span> <br> <span class="bikesCompenentParagraph">Our skilled technicians are trained in servicing a variety of seat rail types, including steel, titanium, and carbon fiber. Whether you're experiencing a loose seat, damaged rails, or any other issue, we have the expertise and tools to address it effectively.</span></div>
+      <div class="trigger-bike-elements rails-trigger"></div>
+
+      <div class="display-bike-elements handles-container" ><span class="bikeComponentsTitle">Handlebars</span> <br> <span class="bikesCompenentParagraph">Our skilled technicians are experienced in servicing a variety of handlebar types, including drop bars, flat bars, and riser bars. Whether you're experiencing handlebar slippage, discomfort, or any other issue, we have the expertise and tools to address it effectively.</span></div>
+      <div class="trigger-bike-elements handles-trigger"></div>
+
+      <div class="display-bike-elements brakes-container" ><span class="bikeComponentsTitle">Brakes</span> <br>Our skilled technicians specialize in servicing a wide range of brake systems, including rim brakes, disc brakes, and hydraulic brakes. Whether you're experiencing squeaky brakes, poor stopping performance, or any other brake-related issue, we have the expertise and tools to diagnose and resolve the problem efficiently.</div>
+      <div class="trigger-bike-elements brakes-trigger"></div>
+
+      <div class="display-bike-elements frame-container" > <span class="bikeComponentsTitle">Frames</span><br>Accurate frame alignment is essential for optimal performance and safety. Using precision tools and meticulous attention to detail, we'll realign your frame to its factory specifications, correcting any bends, twists, or misalignments.</div>
+      <div class="trigger-bike-elements frame-trigger"></div>
+
+      <div class="display-bike-elements saddle-container" ><span class="bikeComponentsTitle">Saddle</span><br>Our saddle bike repair service is tailored to address a wide range of issues, from minor adjustments to complete saddle replacements. Our team of skilled technicians has the expertise and tools necessary to diagnose and resolve any saddle-related problems efficiently.</div>
+      <div class="trigger-bike-elements saddle-trigger"></div>
+
+      <img src="./imgs/bike-top-3.png" alt="" class="">
+    </div>
+ 
+  </div>
+ 
+ 
   <div class="info-bike-service section-container">
-    <div class="info-row row"> <p>Frame</p>    <img src="./imgs/tick.svg" class="icon-hire service-icon" alt=""></div>
+    <div class="info-row row"> <p>Rails</p>    <img src="./imgs/tick.svg" class="icon-hire service-icon" alt=""></div>
 
     <hr>
-    <div class="info-row row"> <p>GroupSet</p>  <img src="./imgs/tick.svg" class="icon-hire service-icon" alt=""></div>
+    <div class="info-row row"> <p>Handlebars</p>  <img src="./imgs/tick.svg" class="icon-hire service-icon" alt=""></div>
 
     <hr>
     <div class="info-row row"> <p>Braking System</p>    <img src="./imgs/tick.svg" class="icon-hire service-icon" alt=""></div>
 
     <hr>
-    <div class="info-row row"> <p>Velg</p>   <img src="./imgs/tick.svg" class="icon-hire service-icon" alt=""></div>
+    <div class="info-row row"> <p>Frames</p>   <img src="./imgs/tick.svg" class="icon-hire service-icon" alt=""></div>
 
     <hr>
-    <div class="info-row row"> <p>Stand</p>    <img src="./imgs/tick.svg" class="icon-hire service-icon" alt=""></div>
+    <div class="info-row row"> <p>Saddle</p>    <img src="./imgs/tick.svg" class="icon-hire service-icon" alt=""></div>
 
     <hr>
     <div class="info-row row"> <p>Pedal</p>    <img src="./imgs/tick.svg" class="icon-hire service-icon" alt=""></div>
