--- a/service.html
+++ b/service.html
@@ -196,23 +196,29 @@
  
   <div class="info-bike-service section-container">
     <div class="info-row row"> <p>Rails</p>    <img src="./imgs/tick.svg" class="icon-hire service-icon" alt=""></div>
+    <p class="hidden serive-para-hidden hidden-service-para1">From adjusting rails to perfecting alignment, our repair service ensures your bike maintains stability and balance for an effortless ride.</p>
+    <hr class="trigger-hidden1">
 
-    <hr>
+
     <div class="info-row row"> <p>Handlebars</p>  <img src="./imgs/tick.svg" class="icon-hire service-icon" alt=""></div>
+    <p class="hidden serive-para-hidden hidden-service-para2">Trust our skilled technicians to fine-tune your handlebars, optimizing control and enhancing your cycling agility.</p>
+    <hr class="trigger-hidden2">
 
-    <hr>
     <div class="info-row row"> <p>Braking System</p>    <img src="./imgs/tick.svg" class="icon-hire service-icon" alt=""></div>
+    <p class="hidden serive-para-hidden hidden-service-para3">Our expert team ensures smooth braking performance with meticulous brake repairs, keeping you safe on every ride.</p>
+    <hr class="trigger-hidden3">
 
-    <hr>
     <div class="info-row row"> <p>Frames</p>   <img src="./imgs/tick.svg" class="icon-hire service-icon" alt=""></div>
+    <p class="hidden serive-para-hidden hidden-service-para4">Whether it's minor adjustments or major fixes, our frame repair specialists ensure the structural integrity of your bike for enduring performance.</p>
+    <hr class="trigger-hidden4">
 
-    <hr>
     <div class="info-row row"> <p>Saddle</p>    <img src="./imgs/tick.svg" class="icon-hire service-icon" alt=""></div>
+    <p class="hidden serive-para-hidden hidden-service-para5">Let us revitalize your biking experience with precision saddle repairs, tailored for maximum comfort and support.</p>
+    <hr class="trigger-hidden5">
 
-    <hr>
     <div class="info-row row"> <p>Pedal</p>    <img src="./imgs/tick.svg" class="icon-hire service-icon" alt=""></div>
-
-    <hr>
+    <p class="hidden serive-para-hidden hidden-service-para6">Put your best foot forward with our pedal repairs, delivering seamless power transfer and efficiency to propel you forward with ease.</p>
+    <hr class="trigger-hidden6">
 
 
   </div>
