--- a/fat-bikes.html
+++ b/fat-bikes.html
@@ -116,7 +116,7 @@
       <p>Welcome to the Road Bikes section , where we celebrate the art of speed, precision, and exhilarating rides along scenic routes. Whether you're a dedicated road warrior seeking to push your limits or a casual rider craving the freedom of the open road, our collection of road bikes is your ticket to unparalleled performance and unrivaled adventure.</p>
   
     </div>
-    <img src="./imgs/hire-top-fat.jpg" alt="">
+    <img src="./imgs/biker-transparent2.png" alt="">
 
   </div>
   <div class="hire-bike-section hire-bike-section-fat col">
