--- a/hybrid-bikes.html
+++ b/hybrid-bikes.html
@@ -119,7 +119,7 @@
       <p>Welcome to the Hybrid Bikes section at Bike King Borders, where the best of both worlds collide – combining the agility of a road bike with the ruggedness of a mountain bike to create the ultimate all-purpose ride. Whether you're commuting through the city streets, exploring scenic trails, or embarking on weekend adventures, our collection of hybrid bikes is your ticket to versatility, comfort, and unrivaled performance.</p>
   
     </div>
-    <img src="./imgs/hire-top-hybrid.jpg" alt="">
+    <img src="./imgs/biker-transparent3.png" alt="">
 
   </div>
  
