--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </div>
     <div class="part-section part-section-top-second">
       <!-- <img class="top-bike-img-small"src="./imgs/bike-top.png" alt=""> -->
-     <a href="./bikes.html" target="_blank">  <img class="top-bike-img"src="./imgs/cycle.png" alt="images from freepik.com"></a>
+     <a href="./bikes.html" target="_blank">  <img class="top-bike-img"src="./imgs/bikes-transparent/bike-top (15).png" alt="images from freepik.com"></a>
       <div class="shapes-background">
       
       </div>
