--- a/mountain-bikes.html
+++ b/mountain-bikes.html
@@ -117,7 +117,7 @@
       <p>Here, amidst the rugged beauty of the Scottish Borders, we invite you to discover the thrill of off-road exploration on two wheels. Whether you're a seasoned trailblazer or a beginner eager to embrace the challenge, our collection of mountain bikes is your gateway to adrenaline-fueled escapades in the great outdoors.</p>
   
     </div>
-    <img src="./imgs/hire-top-mountain.jpg" alt="">
+    <img src="./imgs/biker-transparent.png" alt="">
 
   </div>
 
