--- a/bikes.html
+++ b/bikes.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>bike</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
   <div class="modal-container">
@@ -169,6 +170,14 @@
       <div class="info-news"></div>
 
     </div>
+
+  </div>
+  <div class="faq-section section-container ">
+    <h1 >Frequently Asked Questions</h1>
+    <div class="faq-container row">
+     
+    </div>
+
 
   </div>
   
