--- a/bikes.html
+++ b/bikes.html
@@ -194,15 +194,17 @@
 
   <div class="contact-section">
     <h1 class="header">Have any question?</h1>
-    <form class="form">
+    <form class="form form-main">
       <div class="title">Contact us</div>
-      <input type="text" placeholder="Your email" class="input">
-      <textarea placeholder="Your message"></textarea>
+      <input required ="text" placeholder="Your email" class="input">
+      <textarea required placeholder="Your message"></textarea>
        
-      <button>Submit</button>
-  </form>
+      <button class="submit-form-contact">Submit</button>
+    </form>
 
+  <h1 class="contact-container-msg header">Thank you for your message</h1>
   </div>
+
 
 
   <div class="slider-top">
