--- a/mountain-bikes.html
+++ b/mountain-bikes.html
@@ -111,7 +111,7 @@
       <a href="contact.html " class="nav-link-container"><img class="img-nav "src="./imgs/home.svg" alt=""><p class="">contact</p></a>
     </div>
   </div>
-
+  <h1 class="header extra-big">Mountain Bikes</h1>
   <div class="hire-bikes-top row section-container">
     <div class="text-hire">
       <h1>Welcome to the heart of adventure the Mountain Bikes at <span class="silent">Bike King Borders.</span> </h1>
@@ -171,15 +171,17 @@
 
   <div class="contact-section">
     <h1 class="header">Have any question?</h1>
-    <form class="form">
+    <form class="form form-main">
       <div class="title">Contact us</div>
-      <input type="text" placeholder="Your email" class="input">
-      <textarea placeholder="Your message"></textarea>
+      <input required ="text" placeholder="Your email" class="input">
+      <textarea required placeholder="Your message"></textarea>
        
-      <button>Submit</button>
-  </form>
+      <button class="submit-form-contact">Submit</button>
+    </form>
 
+  <h1 class="contact-container-msg header">Thank you for your message</h1>
   </div>
+
 
 
   <div class="slider-top">
