--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
       <div class="mid_section-container second-mid">
         <div class="text-mid-container">
         
-          <h1 class="mid-first-text">Elevate your ride with our meticulously curated selection of acceosries and bikes</h1>
+          <h1 class="mid-first-text">Elevate your ride with our meticulously selection of accessories</h1>
           <p class="mid-first-text"> Whether you're cruising through the city streets or conquering challenging trails, our 
           diverse range of bikes offers something for every rider with
           </p>
