--- a/contact.html
+++ b/contact.html
@@ -389,7 +389,7 @@
     
   </footer>
   
-  <script src="./js/accesories.js"></script>
+  <script src="./js/objectsArrays/objects.js"></script>
   <script src="./js/index.js"></script>
 </body>
 </html>
