--- a/fat-bikes.html
+++ b/fat-bikes.html
@@ -341,7 +341,8 @@
 
     
   </footer>
-  
+ 
+  <script src="./js/objectsArrays/objects.js"></script>
   <script src="./js/rent-bikes.js"></script>
   <script src="./js/index.js"></script>
 </body>
