--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@ S
 
     
   </footer>
-  
+  <script src="./js/objectsArrays/objects.js"></script>
   <script src="./js/index.js"></script>
   <script src="./js/slider.js"></script>
  
