--- a/about.html
+++ b/about.html
@@ -404,8 +404,8 @@
   
       
     </footer>
-  
-  <script src="./js/accesories.js"></script>
-  <script src="./js/index.js"></script>
+    <script src="./js/objectsArrays/objects.js"></script>
+    
+    <script src="./js/index.js"></script>
 </body>
 </html>
