--- a/hybrid-bikes.html
+++ b/hybrid-bikes.html
@@ -343,7 +343,7 @@
 
     
   </footer>
-  
+  <script src="./js/objectsArrays/objects.js"></script>
   <script src="./js/rent-bikes.js"></script>
   <script src="./js/index.js"></script>
 </body>
