--- a/mountain-bikes.html
+++ b/mountain-bikes.html
@@ -342,7 +342,7 @@
 
     
   </footer>
-  
+  <script src="./js/objectsArrays/objects.js"></script>
   <script src="./js/rent-bikes.js"></script>
   <script src="./js/index.js"></script>
 </body>
