--- a/service.html
+++ b/service.html
@@ -436,7 +436,7 @@
     
   </footer>
   
-  <script src="./js/accesories.js"></script>
+  <script src="./js/objectsArrays/objects.js"></script>
   <script src="./js/index.js"></script>
 </body>
 </html>
