--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
   <div class="modal-container">
-    
+  
+   
    
    
 
@@ -456,7 +457,10 @@
     </div>
 
 
+
   </div>
+  
+  <button class="btn-custom appointment-button">BOOK</button>
   <span class="choose-p-trigger1"></span>
   <div class="choose-section row">
    
