--- a/service.html
+++ b/service.html
@@ -185,7 +185,10 @@
     </div>
 
 
+
   </div>
+  
+  <button class="btn-custom appointment-button">BOOK</button>
 
   <div class="service-grid section-container">
     <div class="service-grid-row col">
