--- a/about.html
+++ b/about.html
@@ -158,8 +158,10 @@
     </div>
 
 
-    <img class="about-big"src="./imgs/about-big.jpg" alt="">
+   
+    <div class="abount-banner about-big">
 
+    </div>
     <div class="about-community row section-container">
         <img src="./imgs/about-community.jpg" alt="">
         <div class="about-community-text-container">
