--- a/accessories.html
+++ b/accessories.html
@@ -125,7 +125,9 @@
   </div>
 
 
-  <img class="about-big"src="./imgs/big-accessories.jpg" alt="">
+  <div class="accessories-banner about-big">
+
+  </div>
   <div class="about-more row section section-container">
     <h1>Gear Up for Success</h1>
       <div class="col about-p">
