--- a/bikes.html
+++ b/bikes.html
@@ -127,8 +127,10 @@
 
   </div>
 
+  <div class="bikes-banner about-big">
 
-  <img class="about-big"src="./imgs/big-bikes.jpg" alt="">
+  </div>
+ 
   <div class="about-more row section section-container">
     <h1> Discover the perfect ride for your cycling aspirations with our premium selection of bikes. </h1>
       <div class="col about-p">
