--- a/clothes.html
+++ b/clothes.html
@@ -126,7 +126,10 @@
   </div>
 
 
-  <img class="about-big"src="./imgs/clothes-big.jpg" alt="">
+
+  <div class="clothes-banner about-big">
+
+  </div>
   <div class="about-more row section section-container">
     <h1>Ride in Style From sleek jerseys and padded shorts to weather-resistant jackets and versatile accessories</h1>
       <div class="col about-p">
