--- a/hybrid-bikes.html
+++ b/hybrid-bikes.html
@@ -6,6 +6,7 @@
   <title>bike</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="modal-container">
@@ -25,7 +26,7 @@
       </label>
     </div>
     <div class="nav-container-box logo-nav-container">
-      <img class="logo" src="./imgs/logo-no-background.svg" alt="">
+      <img class="logo" src="./imgs/logo-no-background-test.svg" alt="">
     </div>
     <div class="nav-conainer">
       
@@ -111,17 +112,18 @@
       <a href="contact.html " class="nav-link-container"><img class="img-nav "src="./imgs/home.svg" alt=""><p class="">contact</p></a>
     </div>
   </div>
-  <h1 class="header extra-big">Hybrid Bikes </h1>
-  <div class="hire-bikes-top row section-container">
+
+  <div class="hire-bikes-top bikes-rent-hybrid col section-container">
+ 
     <div class="text-hire">
-      <h1>Versatility Meets Adventure at <span class="silent">Bike King Borders</span> </h1>
+      <h1 class="extra-big">Hybrid Bikes </h1>
+      <p>Versatility Meets Adventure at Bike King Borders</p>
 
  
-      <p>Welcome to the Hybrid Bikes section at Bike King Borders, where the best of both worlds collide – combining the agility of a road bike with the ruggedness of a mountain bike to create the ultimate all-purpose ride. Whether you're commuting through the city streets, exploring scenic trails, or embarking on weekend adventures, our collection of hybrid bikes is your ticket to versatility, comfort, and unrivaled performance.</p>
+    
   
     </div>
-    <img src="./imgs/biker-transparent3.png" alt="">
-
+  
   </div>
  
 
