--- a/bikes.html
+++ b/bikes.html
@@ -6,6 +6,7 @@
   <title>bike</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="modal-container">
@@ -25,7 +26,7 @@
       </label>
     </div>
     <div class="nav-container-box logo-nav-container">
-      <img class="logo" src="./imgs/logo-no-background.svg" alt="">
+      <img class="logo" src="./imgs/logo-no-background-test.svg" alt="">
     </div>
     <div class="nav-conainer">
       
@@ -113,23 +114,21 @@
     </div>
   </div>
 
-  <div class="top-sub-pages">
-    <h1>Your Passport to Adventure</h1>
+  <div class="top-sub-pages bikes-sub-top">
+    <div class="top-sub-pages-text">
+      <h1>Your Passport to Adventure</h1>
 
-    <img src="./imgs/bbb.png" alt="">
-    <div class="desc-bikes-bike">
+      
+      <div class="desc-bikes-bike">
 
-      <p>Whether you're a seasoned enthusiast, a casual rider, or a newcomer eager to explore the world on two wheels, our collection of bikes is your gateway to unforgettable experiences, exhilarating rides, and endless possibilities.</p>
+        <p>Whether you're a seasoned enthusiast, a casual rider, or a newcomer eager to explore the world on two wheels, our collection of bikes is your gateway to unforgettable experiences, exhilarating rides, and endless possibilities.</p>
 
 
+      </div>
     </div>
 
-
   </div>
 
-  <div class="bikes-banner about-big">
-
-  </div>
  
   <div class="about-more row section section-container">
     <h1> Discover the perfect ride for your cycling aspirations with our premium selection of bikes. </h1>
