--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>bike</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-  
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
       </label>
     </div>
     <div class="nav-container-box logo-nav-container">
-      <img class="logo" src="./imgs/logo-no-background.svg" alt="">
+      <img class="logo" src="./imgs/logo-no-background-test.svg" alt="">
     </div>
     <div class="nav-conainer">
       
@@ -115,17 +115,46 @@
 
 
   </div>
-  <div class="header-section">
-    <div class="header-container">
-      <div class="text-container">
-        <h1>Bike kings Road</h1>
-        <p>Your travel companion, allowing you to ride in comfort. We provide an unrivaled riding experience, with an elegant design and the latest technology.</p>
-        <a href="bikes.html" target="_blank" >    <button class="btn-custom">Buy a bike</button></a>
-      </div>
-
-    </div>
-  </div>
  
+  <div class="header-section">
+    <div class="sliderContainer">
+      <div class="header-container x">
+        <div class="text-container">
+          <h1>Bike kings Road</h1>
+          <p>Your travel companion, allowing you to ride in comfort. We provide an unrivaled riding experience, with an elegant design and the latest technology.</p>
+          <a href="bikes.html" target="_blank" >    <button class="btn-custom">Buy a bike</button></a>
+        </div>
+  
+      </div>
+     
+      <div class="hidden clothes-main-slide">
+        <div class="text-container">
+          <h1>Bike kings Road</h1>
+          <p>Whether you're seeking to enhance performance, increase comfort, or simply add a touch of style to your cycling experience, our collection of accessories has everything you need to take your ride to the next level.</p>
+          <a href="clothes.html" target="_blank" >    <button class="btn-custom">Buy clothes</button></a>
+        </div>
+  
+      </div>
+      <div class="hidden accessories-main-slide">
+        <div class="text-container">
+          <h1>Bike kings Road</h1>
+          <p>Whether you're a dedicated road warrior, a trailblazing mountain biker, or a casual rider exploring scenic routes, our collection of cycling clothing is designed to keep you comfortable, protected, and looking your best on every ride.</p>
+          <a href="accessories.html" target="_blank" >    <button class="btn-custom accessories-btn-top">Buy accessories</button></a>
+        </div>
+  
+      </div>
+      <div class="hidden service-main-slide">
+        <div class="text-container">
+          <h1>Bike kings Road</h1>
+          <p>Our repair service is ensuring that every cyclist enjoys a smooth and safe ride.</p>
+          <a href="service.html" target="_blank" >    <button class="btn-custom accessories-btn-top">get repaired</button></a>
+        </div>
+  
+      </div>
+    </div>
+  
+  </div>
+
   <div class="section top_section">
   
     <div class="part-section part-section-top-fist">
